--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ google-pasta==0.2.0
 grpcio==1.66.1
 h5py==3.11.0
 idna==3.8
+iniconfig==2.0.0
 joblib==1.4.2
 keras==3.5.0
 libclang==18.1.1
@@ -34,8 +35,13 @@ opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
 pandas==2.2.2
+pluggy==1.5.0
 protobuf==4.25.4
 Pygments==2.18.0
+pyJoules==0.5.1
+pynvml==11.5.3
+pyRAPL==0.2.3.1
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
