--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,9 @@
 [pytest]
 # Global timeout in seconds for each test
 timeout = 5
+
+# Coverage configuration
+# --cov=eppnad: Specifies that we want to measure coverage for the 'eppnad' directory.
+# --cov-report=term-missing: Shows a report in the terminal, highlighting the lines that are not covered by tests.
+# --cov-fail-under=60: Sets our initial coverage target to 60%. The test suite will fail if coverage drops below this threshold.
+addopts = --cov=eppnad --cov-report term-missing --cov-fail-under=60
