--- a/pytest.ini
+++ b/pytest.ini
@@ -5,7 +5,8 @@
 timeout = 5
 
 # Coverage configuration
-# --cov=eppnad: Specifies that we want to measure coverage for the 'eppnad' directory.
-# --cov-report=term-missing: Shows a report in the terminal, highlighting the lines that are not covered by tests.
-# --cov-fail-under=60: Sets our initial coverage target to 60%. The test suite will fail if coverage drops below this threshold.
 addopts = --cov=eppnad --cov-report term-missing --cov-fail-under=60
+
+# Register custom markers
+markers =
+    rapl: marks tests that require pyRAPL hardware access
