Updating environment yaml to remove some warnings.

--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,18 @@
-# environment.yml
-# Defines the Conda environment for the EPPNAD project.
-# To create the environment, run: conda env create -f environment.yml
-# To activate it, run: conda activate nad-framework
-
 name: eppnad
 channels:
   - conda-forge
   - defaults
 
 dependencies:
-  # Core Python and Environment
+  # Core, Data Science, and ML
   - python=3.10
-  - pip
-
-  # Machine Learning & Data Handling
-  # Based on your requirements.txt
   - tensorflow
   - pandas
   - scikit-learn
   - numpy
   - pynvml
-
+  - pymongo      
+  
   # Plotting & Visualization
   - matplotlib
   - seaborn
@@ -30,10 +22,10 @@ dependencies:
   - pytest-cov
   - pytest-mock
   - pytest-timeout
-  - black # For code formatting
+  - black 
 
-  # Pip-specific packages
-  # For dependencies not available or best handled by pip
+  # Pip-specific packages (only what's not on conda)
+  - pip
   - pip:
     - pyJoules==0.5.1
     - pyRAPL==0.2.3.1
